[package]
name = "rescrobbled"
version = "0.1.0"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2018"

[dependencies]
mpris = "2.0.0-rc1"
rustfm-scrobble = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.0"
dirs = "2.0"
notify-rust = "3"

[dependencies.regex]
version = "1.2"

[dependencies.reqwest]
version = "0.9"

[dependencies.serde_json]
version = "1.0"